2013-12-13  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_ctrl.c (HID_LED_STATUS_CARDCHANGE): Rename from
	HID_LED_STATUS_NUMLOCK.

	* tool/gnuk_token.py (gnuk_token.stop_gnuk): Detach kernel
	driver of HID.

2013-12-12  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp-do.c (do_openpgpcard_aid): Coerce to volatile to
	force memory access at run time.

2013-12-11  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/sys.c (entry): Fix relocation calculation.

2013-11-27  Niibe Yutaka  <gniibe@fsij.org>

	* src/stm32f103.h (AFIO_MAPR_SWJ_CFG_DISABLE): New.
	* src/sys.c: Likewise.

2013-11-26  Niibe Yutaka  <gniibe@fsij.org>

	* src/usb_desc.c (hid_report_desc): New.
	(ICC_TOTAL_LENGTH): Update.
	(HID_TOTAL_LENGTH, HID_NUM_INTERFACES): New.
	(W_TOTAL_LENGTH, NUM_INTERFACES): Update.
	(gnukConfigDescriptor): Add IN2 interrupt endpoint descriptor.
	Add HID interface descriptor.
	(usb_cb_get_descriptor): Handle HID.

	* src/usb_ctrl.c (NUM_INTERFACES, MSC_INTERFACE_NO): Add 1.
	(USB_HID_REQ_*, HID_LED_STATUS_NUMLOCK): New.
	(gnuk_setup_endpoints_for_interface): Add ENDP2 interrupt
	endpoint.
	(usb_cb_setup): Handle HID requests.
	(usb_cb_ctrl_write_finish): Likewise.

	* src/usb-icc.c (ccid_card_change_signal): New.
	(ccid_thread): Handle card change.
	(icc_error, icc_send_status): Handle ICC_STATE_NOCARD state.
	(icc_handle_data): Add the case of ICC_STATE_NOCARD.
	(EP2_IN_Callback): New.

2013-11-26  Niibe Yutaka  <gniibe@fsij.org>

	* src/pin-dial.c: Remove.
	* src/configure: Remove pin-dial support.

2013-11-25  Niibe Yutaka  <gniibe@fsij.org>

	* src/Makefile.in (HEXOUTPUT_MAKE_OPTION): New.
	* src/configure (HEXOUTPUT_MAKE_OPTION): New.
	* src/main.c: Include board.h.
	* src/stm32f103.h (EXTI0_IRQ, EXTI1_IRQ): New.

2013-11-18  Niibe Yutaka  <gniibe@fsij.org>

	* regnual/sys.c (entry): Bug fix of clearing BSS.

	* src/usb_stm32f103.c: Update from NeuG.
	(usb_handle_transfer): Add argument ISTR_VALUE.

	* src/openpgp.c (card_thread): Add noinline attribute.
