@@ -1,5 +1,12 @@
 2013-12-13  Niibe Yutaka  <gniibe@fsij.org>
 
+	* polarssl/library/bignum.c (mpi_montmul, mpi_montred): Minimize
+	number of limbs for T.
+	(mpi_exp_mod): Only allocate N-n * 2 for T.
+	Only allocate N->n for X, W[i], and RR.
+
+2013-12-13  Niibe Yutaka  <gniibe@fsij.org>
+
 	* src/usb_ctrl.c (HID_LED_STATUS_CARDCHANGE): Rename from
 	HID_LED_STATUS_NUMLOCK.
 
